correct mm and ps